// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should match snapshot - all default 1`] = `
<button
  className=""
  disabled={false}
  type="button"
>
  text
</button>
`;

exports[`Button should match snapshot - danger variant 1`] = `
<button
  className=""
  disabled={false}
  type="button"
>
  text
</button>
`;

exports[`Button should match snapshot - disabled 1`] = `
<button
  className=""
  disabled={true}
  type="button"
>
  text
</button>
`;

exports[`Button should match snapshot - fullWidth 1`] = `
<button
  className=""
  disabled={false}
  type="button"
>
  text
</button>
`;

exports[`Button should match snapshot - info variant 1`] = `
<button
  className=""
  disabled={false}
  type="button"
>
  text
</button>
`;

exports[`Button should match snapshot - loading 1`] = `
<button
  className=""
  disabled={false}
  type="button"
>
  text
</button>
`;

exports[`Button should match snapshot - primary variant 1`] = `
<button
  className=""
  disabled={false}
  type="button"
>
  text
</button>
`;

exports[`Button should match snapshot - secondary variant 1`] = `
<button
  className=""
  disabled={false}
  type="button"
>
  text
</button>
`;

exports[`ButtonGroup should match snapshot - centered 1`] = `
<div
  className=""
>
  <Component>
    text
  </Component>
  <Component>
    text
  </Component>
  <Component>
    text
  </Component>
</div>
`;

exports[`ButtonGroup should match snapshot - default 1`] = `
<div
  className=""
>
  <Component>
    text
  </Component>
  <Component>
    text
  </Component>
  <Component>
    text
  </Component>
</div>
`;
